src/objects/Product__c.object
<CustomObject>
    <fields>
        <fullName>ID__c</fullName>
        <label>ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>products</relationshipLabel>
        <relationshipName>products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_description__c</fullName>
        <label>Product description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Product</label>
    <nameField>
        <displayFormat>A-{000}</displayFormat>
        <label>Product_ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>